--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <div class="grid-layout">
   <div class="header">
-    <div class="nameInputs">
-      <label for="nameOne">Player one: <input type="text" id="nameOne" value="hello"></label>
-      <label for="nameTwo">Player two: <input type="text" id="nameTwo" value="hello 2"></label>
+    <div class="nameInputs" id="names">
+      <label for="nameOne">Player one: <input type="text" id="nameOne" value=""></label>
+      <label for="nameTwo">Player two: <input type="text" id="nameTwo" value=""></label>
     </div>
     <div class="btn-div">
       <button id="start-btn" class="start-btn">Start</button>
